# level

./: .ai-instructions  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/level/: cli.py  config.py  logging.py
src/level/commands/: apply.py  config.py  plan.py  practice.py  resume.py  review.py  stats.py
tests/: test_cli.py  test_config.py
tests/commands/: test_config.py
