[project]
name = "level"
version = "0.1.0"
description = "A personal career operating system for engineers."
authors = [{ name = "Andy Dawson" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
level = "level.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
