[project]
name = "level"
version = "0.1.0"
description = "A personal career operating system for engineers."
authors = [{ name = "Andy Dawson" }]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
level = "level.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Tooling Configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.14"
files = ["src"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
